--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="descrizione2">Descrizione</string>
     <string name="modifica_la_categoria">Modifica la categoria</string>
     <string name="modifica_la_descrizione_della_posizione">Modifica la descrizione della posizione</string>
+    <string name="modifica_la_categoria">Modifica la categoria</string>
+    <string name="categoria">Categoria</string>
+    <string name="salva_le_modifiche">Salva le modifiche</string>
+    <string name="elimina_la_categoria">Elimina la categoria</string>
+    <string name="elimina_la_posizione">Elimina la posizione</string>
 </resources>
